Includes pop up and pass reset

--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -54,7 +54,7 @@
                                         <label><i class="fa fa-key"></i>Password</label>
                                         <input type="password" class="form-control cituhub-global-input" placeholder="Enter Your Password" required />
                                         <div class="forgot-pass">
-                                            <span><a href="../dashboard/dashboard.html">Forgot Password</a></span>
+                                            <span><a href="../subpages/forgotPass.html">Forgot Password</a></span>
                                         </div>
                                     </div>
                                 </div>
@@ -70,7 +70,7 @@
                         </div>
                     </form>
                     <div class="signup-link">
-                        <a href="register.html">Create New Account <i class="fa fa-angle-double-right"></i></a>
+                        <a href="../dashboard/dashboard.html">Create New Account <i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
                 <div class="auth-form-copy-right">
