--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                             </div>
                                         </form>
                                     </div>
-                                    <div class="suggestion-wrapper">
+                                    <div class="suggestion-wrapper" id="restaurent-wp">
                                         <div class="suggestion-parent-wrapper">
                                             <div class="suggestion-childs-wrapper">
                                                 <span><i class="fa fa-question"></i></span>
@@ -235,6 +235,58 @@
                                                     <li>
                                                         <button
                                                             onclick="changeLocationVal('Baneshwor')">Baneshwor</button>
+                                                    </li>
+                                                    <li>
+                                                        <button onclick="changeLocationVal('Thankot')">Thankot</button>
+                                                    </li>
+                                                    <li>
+                                                        <button
+                                                            onclick="changeLocationVal('Nagarkot')">Nagarkot</button>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="suggestion-wrapper d-none" id="cafe-wp">
+                                        <div class="suggestion-parent-wrapper">
+                                            <div class="suggestion-childs-wrapper">
+                                                <span><i class="fa fa-question"></i></span>
+                                            </div>
+                                            <div class="suggestion-childs-wrapper">
+                                                <ul>
+                                                    <li>
+                                                        <button onclick="changeLookingVal('Pizza')">Pizza changed</button>
+                                                    </li>
+                                                    <li>
+                                                        <button onclick="changeLookingVal('Mo:Mo')">Mo:Mo changed</button>
+                                                    </li>
+                                                    <li>
+                                                        <button onclick="changeLookingVal('Chowmin')">Chowmin changed</button>
+                                                    </li>
+                                                    <li>
+                                                        <button onclick="changeLookingVal('Ramen')">Ramen changed</button>
+                                                    </li>
+                                                    <li>
+                                                        <button onclick="changeLookingVal('Thuppa')">Thuppa changed</button>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="suggestion-parent-wrapper">
+                                            <div class="suggestion-childs-wrapper">
+                                                <span><i class="fa fa-map-marker-alt"></i></span>
+                                            </div>
+                                            <div class="suggestion-childs-wrapper">
+                                                <ul>
+                                                    <li>
+                                                        <button onclick="changeLocationVal('Thamel')">Thamel changed</button>
+                                                    </li>
+                                                    <li>
+                                                        <button onclick="changeLocationVal('Balaju')">Balaju changed</button>
+                                                    </li>
+                                                    <li>
+                                                        <button
+                                                            onclick="changeLocationVal('Baneshwor')">Baneshwor changed</button>
                                                     </li>
                                                     <li>
                                                         <button onclick="changeLocationVal('Thankot')">Thankot</button>
