--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -70,7 +70,7 @@
                         </div>
                     </form>
                     <div class="signup-link">
-                        <a href="../dashboard/dashboard.html">Create New Account <i class="fa fa-angle-double-right"></i></a>
+                        <a href="register.html">Create New Account <i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
                 <div class="auth-form-copy-right">
